# dcompose-workbench

./: .eslintrc.cjs  .pnp.cjs  CHANGELOG.md  README.md  TODO.md  package.json  tailwind.config.js
.github/workflows/: publish.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dependencies.rs  docker.rs  docker_compose.rs  lib.rs  main.rs  relationships.rs  scenes.rs  services.rs  state.rs  utils.rs
src/components/: CreateScene.tsx  CreateSceneDialog.tsx  CreateServiceDrawer.tsx  CustomEdge.tsx  CustomNode.tsx  EdgeDrawer.tsx  EditService.tsx  EditServiceAssets.tsx  ExternalNodeDrawer.tsx  ImportSceneDialog.tsx  NodeDrawer.tsx  SceneHeader.tsx  SceneMenu.tsx  ServiceLogs.tsx
src/hooks/: useTauriEvent.ts
src/pages/: Scene.tsx  Scenes.tsx
src/types/: docker.d.ts  scene.d.ts  service.d.ts
