[package]
name = "dcompose-workbench"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "path-all", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
bollard = "0.16.1"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros"] }
chrono = "0.4.38"
fs_extra = "1.3.0"
path-absolutize = "3.1.1"
capitalize = "0.3.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
